Refactor thread pool to virtual